--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -75,6 +75,14 @@
   --color-muted-m-800: #424242;
   --color-muted-m-900: #242424;
   --color-muted-m-950: #151515;
+
+  /* Breakpoints */
+
+  --breakpoint-2xl: 1440px;
+  --breakpoint-3xl: 1536px;
+  --breakpoint-4xl: 1600px;
+  --breakpoint-5xl: 1920px;
+  --breakpoint-6xl: 2560px;
 }
 
 @media (prefers-color-scheme: dark) {
